-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1050 2011-05-25 20:44:05 remko Exp $
-----------------------------------------------------------------------------------------

2011-05-25	remko
	* pslegend_func.c:	Label (L) should have default font FONT_LABEL, not FONT_TITLE.
				Default font color was not maintained in output of L or H.

2011-05-25	pwessel
	* grdblend_func.c:	Fixed read error in info file, and the phase check.
				Added blend.sh script to test suite.

2011-05-24	remko
	* psscale_func.c:	Overrule MAP_FRAME_AXES default; make it WESN.
				Do not double plot the frame line along the annotate axis.
				Let WESN setting on -B work properly with -A.

2011-05-24	pwessel
	* nearneighbor_func.c:	The -N1 selection did not reset the minimum sector setting to 1.
				Improved node-search using common machinery in gmt_support.c
	* grdmask_func.c:	Improved node-search using common machinery in gmt_support.c
	* psmask_func.c:	---"---
	* gmt_support.c:	Determine half-widths/heights for node search used in several modules
	* gmt_map.c:		Give -V3 warning if a radius unit turns geographic mode (-fg) on.
	* spotter/grdspotter_func.c:		Fixed porting errors.

2011-05-22	pwessel
	* *_func.c:		Made sure usage message matches the man pages.

2011-05-21	remko
	* test/grdimage/gdal:	Moved images in here to avoid deleting needle.png on "make spotless"

2011-05-20	jluis
	* gmt_notunix.h:	Remove #define HAVE_SINCOS 1 for Intel compilers because it's extremely slow.

2011-05-20	remko
	* gmt_io.c:		Fixed bug in parsing segment headers (did not allow empty argument after option).
	* gmt_math.h:		No longer include gmt_notposix.h (moved to gmt.h and pslib.c).
	* pslib.c, gmt.h:	For logical reasons, include BOTH gmt_notunix.h, then gmt_notposix.h.
	* gmt_notunix.h:	No longer define SET_IN_NOTUNIX, but simply define _GMT_NOTPOSIX_H.
	* gmt_constants.h:	Introduced constants GMT_BIGENDIAN (0/1), GMT_ENDIAN ('L'/'B').